alerta de version

--- a/redirect/index.html
+++ b/redirect/index.html
@@ -30,6 +30,7 @@
 	<!-- INIT -->
 
 	<h1 style="text-align: center">INTERNET SUPERIOR A 8</h1>
+	<p class="data" style="text-align: center"></p>
 
 	<!-- FIN INIT -->
 
