alerta de version

--- a/redirect/index.html
+++ b/redirect/index.html
@@ -30,7 +30,10 @@
 	<!-- INIT -->
 
 	<h1 style="text-align: center">INTERNET SUPERIOR A 8</h1>
-	<p class="data" style="text-align: center"></p>
+	<p class="dataFName" style="text-align: center"></p>
+	<p class="dataName" style="text-align: center"></p>
+	<p class="dataFVer" style="text-align: center"></p>
+	<p class="dataFVer" style="text-align: center"></p>
 
 	<!-- FIN INIT -->
 
