--- a/redirect/index.html
+++ b/redirect/index.html
@@ -14,7 +14,8 @@
 
 	<!-- TOP SCRIPTS -->
 
-	<script src="js/jquery.js"></script>
+	<!-- script src="js/jquery.js"></script -->
+	<script src="js/jquery_1.9.1.js"></script>
 
 
 
