--- a/arTest/index.html
+++ b/arTest/index.html
@@ -24,11 +24,40 @@
 	<script src='js/threex.jsarucomarker.js'></script>
 
 	<script src='js/threex.videotexture.js'></script>
+
+
+	<style>
+		body {
+			background-color: black;
+		}
+		.playBtn {
+		    position: absolute;
+		    width: 100%;
+		    height: 100%;
+		    background: rgba(0,0,0,0.5);
+		}
+		.playBtn img {
+		    position: absolute;
+		    width: 150px;
+		    height: 150px;
+		    top: 50%;
+		    left: 50%;
+		    margin: -75px 0 0 -75px;
+		}
+	</style>
 </head>
 <body style='margin: 0px; overflow: hidden; text-align:center;'>
 	<div id="container" data-video-src="video/reel_LM_2.mp4">
-
+		<div class="playBtn">
+			<img src="images/playBtn.png" class="playTrigger" alt="">
+		</div>
 	</div>
+<script>
+	$(".playTrigger").click( function(){
+		$(".playBtn").fadeOut();
+		vid.play();
+	});
+</script>
 <script>
 	//////////////////////////////////////////////////////////////////////////////////
 	//		Init
@@ -190,7 +219,7 @@
 
 			object3d.visible = true
 
-			vid.play();
+			//vid.play();
 
 		})
 	})
