--- a/resources/lettering/index.html
+++ b/resources/lettering/index.html
@@ -14,7 +14,7 @@
 
 	<script type="text/javascript" src="js/jquery_1.12.4.js"></script>
 	<script>
-		var dir = "img/";
+		var dir = "http://david-arias.github.io/resources/lettering/img/";
 		var fileextension = ".jpg";
 		$.ajax({
 			//This will retrieve the contents of the folder if the folder is configured as ‘browsable’
