--- a/index.html
+++ b/index.html
@@ -5,12 +5,25 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title> - MAIN GITHUB INDEX - </title>
 	<link rel="stylesheet" href="">
+
+	<style>
+		.menuWrap a {
+			display: block;
+			width: 300px;
+			height: 300px;
+			border: thin solid red;
+			background: url(https://unsplash.it/300/300/) ;
+			float: left;
+		}
+		.menuWrap a:hover {;
+			background: url(https://unsplash.it/300/300/?blur) ;
+		}
+	</style>
 </head>
 <body>
 	<div class="menuWrap">
-		<a href="inspiration/">
-			<span>inspiration</span>
-		</a>
+		<a href="inspiration/"> <span>inspiration</span> </a>
+		<a href="inspiration/"> <span>inspiration</span> </a>
 	</div>
 </body>
 </html>
