added google analytics

--- a/index.html
+++ b/index.html
@@ -25,5 +25,16 @@
 		<a href="inspiration/"> <span>inspiration</span> </a>
 		<a href="inspiration/"> <span>inspiration</span> </a>
 	</div>
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121180906-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-121180906-1');
+	</script>
+
 </body>
 </html>
